[gd_scene load_steps=8 format=3 uid="uid://w03s8oyae64k"]

[ext_resource type="Script" path="res://Scripts/Player/Hook.gd" id="1_8cx1b"]
[ext_resource type="Texture2D" uid="uid://b0ptjby3pygr3" path="res://Sprites/Talisman.png" id="2_6qdm7"]
[ext_resource type="Texture2D" uid="uid://bhnnr6hg3dx32" path="res://Sprites/Light.png" id="3_d0nsb"]
[ext_resource type="AudioStream" uid="uid://dksnj7mdfhbfb" path="res://Audio/Grapple Throw.mp3" id="4_8t4dr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gr35c"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fgtal"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jvdeu"]
radius = 9.0

[node name="Hook" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 4
script = ExtResource("1_8cx1b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gr35c")

[node name="HookHitbox" type="Area2D" parent="."]
collision_mask = 66

[node name="CollisionShape2D" type="CollisionShape2D" parent="HookHitbox"]
shape = SubResource("CircleShape2D_fgtal")
debug_color = Color(0.980392, 0.141176, 0, 0.419608)

[node name="DetachHitbox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetachHitbox"]
shape = SubResource("CircleShape2D_jvdeu")
debug_color = Color(0.254902, 0.635294, 0.0588235, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="DetachHitbox"]
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_6qdm7")

[node name="HookTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.2
texture = ExtResource("3_d0nsb")

[node name="Audio" type="Node2D" parent="."]

[node name="GrappleThrowNoise" type="AudioStreamPlayer2D" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("4_8t4dr")

[connection signal="body_entered" from="HookHitbox" to="." method="_on_hook_hitbox_body_entered"]
[connection signal="body_exited" from="HookHitbox" to="." method="_on_hook_hitbox_body_exited"]
[connection signal="timeout" from="HookTimer" to="." method="_on_hook_timer_timeout"]
